18.0.2
------

18.0.1
------
(RB=1178824)
Exposes PartitionDegraderLoadBalancerStateListener through constructors of D2 classes
(RB=1188873)
Add SSL support for netty server.
(RB=1178824)
Adding the ability to set the request timeout on a per-request basis

18.0.0
------
(RB=1170654)
Updated unstructured data streaming to use Java 9 Flow APIs

17.0.5
------
(RB=1178474)
Update quickstart service to use the latest maven release.
(RB=1179112)
Make CodeUtil.getUnionMemberName(UnionTemplate.Member) public to make it accessible for codegen in other languages.

17.0.4
------
(RB=1175234)
Fix SchemaParser to handle jar files as sources. Bug was introduced during the refactor to support pdl schemas.

17.0.3
------
(RB=1173612)
Update MaskTree#getOperations method to handle array range attributes.

17.0.2
------
(RB=1172849)
Shutting down ssl channelPool and fixing race condition

17.0.1
------
(RB=1168627)
Re-enable delay tests with seeded randomHash
(RB=1171477)
Ensure publisher is set after zk connection is established

17.0.0
------

16.0.6
------
(RB=1161557)
Refactor DegraderLoadBalancerStrategyV3 class

16.0.5
------
(RB=1153256)
Integration tests for projecting array fields with specific ranges.

(RB=1155706)
Fix the DataTemplate generation issue on Gradle 4.3's modified OutputDirectory generation time.

16.0.4
------
(RB=1147537)
Logs request path only instead of the full URI

(RB=1154436)
Allows SslSessionNotTrustedException to be created with an inner exception and message

16.0.3
------
(RB=1148299)
Changes to specify array ranges while projecting fields.
(0) Update PathSpec to include attributes (start and count).
(1) Update Java DataTemplate codegen to generate field PathSpec methods for specifying array ranges.
(2) Update MaskComposition to take care of merging array ranges.

(RB=1139217)
Update URIMaskUtil is parse array ranges in URI fields projection and fix bugs in Filer and CopyFilter.

(RB=1148212)